# xinyin

./: Cargo.toml  README.md
doc/: 心印助记字方案-一看就懂版.md  心印助记字计算过程-简单说明.md
xinyin/: Cargo.toml
xinyin-cli/: Cargo.toml
xinyin-cli/src/: main.rs
xinyin-wasm/: Cargo.toml  build.sh
xinyin-wasm/src/: lib.rs
xinyin/src/: lib.rs
xinyin/src/sks/: mod.rs  utils.rs
xinyin/src/xinyin/: charset_256.rs  generate.rs  import.rs  mod.rs  utils.rs
