[package]
name = "xinyin"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.9.0-rc.1"
aes-gcm = { version = "0.11.0-rc.1", optional = true }
cbc = { version = "0.2.0-rc.1", features = ["alloc"], optional = true }
argon2 = { version = "0.6.0-rc.1", features = ["alloc", "std"] }

anyhow = "1.0.98"
rand = { version = "0.9.1", features = ["unbiased"], optional = true }
rand_chacha = { version = "0.9.0", optional = true }
sha2 = "0.10.9"
bs58 = { version = "0.5.1", optional = true }
ed25519-dalek = { version = "2.1.1", optional = true }
base64 = { version = "0.22.1", optional = true }
getrandom = "0.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = ["console", "Storage"] }

[features]
default = []
import = ['dep:cbc', 'dep:rand_chacha']
generate = ['dep:cbc', 'dep:rand', 'dep:rand_chacha']
sks = ['dep:bs58', 'dep:ed25519-dalek', "dep:base64", 'dep:aes-gcm', 'dep:rand']
